# trading-core

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  playground.py  pyproject.toml
.codex/rules/: default.rules
examples/: ex01.py  ex02.py  loader.py  main.py
examples/ex02/: __init__.py  origin.py  refer.py
src/trading_core/: __init__.py  definer.py  domain.py  exceptions.py  helper.py  model.py
tests/: test_ex01.py  test_ex02.py  test_framework.py  test_model_validation.py
