[project]
name = "trading-core"
version = "0.1.0"
description = "Market-agnostic trading strategy & indicator library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "bynaki", email = "bynaki@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]
